# libmaff

./: CMakeLists.txt  Makefile  README.md  area.c  basic.c  doxconfig  list.c  llist-extra.c  llist.c  maff.h  main.c  pi.c  randomnum.c  vector.c  volume.c
